# LBCUDA

./: .gitignore  CMakeLists.txt  D2Q9.h  D2Q9_Reverse.c  D2Q9_Vel.c  D2Q9_Vel.h  Makefile  README.md  int2dArray.c  latticeBox2D  latticeBox2D.c  latticeReverseDir.c  latticeReverseDir.h  latticeVelocities.c  latticeVelocities.h  writeBasicMesh.c  writeBasicMesh.h
include/: D2Q9.h  (+112 more)
src/C/: CMakeLists.txt
src/C/FDOperations/: CMakeLists.txt  FDOperations.h  scalarGradient.c  scalarGradient.h  vectorDivergence.c  vectorDivergence.h
src/C/IO/: CMakeLists.txt  IO.h  updateCaseFile.c  updateCaseFile.h  writeMeshToEnsight.c  writeMeshToEnsight.h  writeScalarToEnsight.c  writeScalarToEnsight.h  writeVectorToEnsight.c  writeVectorToEnsight.h
src/C/applications/: CMakeLists.txt
src/C/applications/mesh/: CMakeLists.txt
src/C/applications/mesh/latticeBox2D/: CMakeLists.txt  latticeBox2D.c
src/C/applications/solvers/: CMakeLists.txt
src/C/applications/solvers/IOTest/: CMakeLists.txt  IOTest.c
src/C/applications/solvers/VdWColumnHT/: CMakeLists.txt  VdWColumnHT.c  writeDebug.c  writeDebug.h
src/C/applications/tests/: CMakeLists.txt
src/C/basic/: CMakeLists.txt  basic.h  int2dArray.h  nbReductionCPU.c  nbReductionCPU.h  readInitialParameters.c  readInitialParameters.h  scalar2dArray.h  writeTime.c  writeTime.h  zerothMomentCPU.c  zerothMomentCPU.h
src/C/latticeMesh/: CMakeLists.txt  basicMesh.h  latticeMesh.h  readBasicMesh.c  readBasicMesh.h  writeBasicMesh.c
src/C/latticeModel/: CMakeLists.txt  MRT_Matrix.c  MRT_Matrix.h  MRT_invMatrix.c  MRT_invMatrix.h  latticeCS2.c  latticeCS2.h  latticeModel.h  latticeModelInfo.h  latticeReverseDir.h  latticeVel.c  latticeVel.h  latticeVelocities.h
src/C/latticeModel/D2Q9/: CMakeLists.txt  D2Q9.h  D2Q9_MRT_Matrix.c  D2Q9_MRT_Matrix.h  D2Q9_MRT_invMatrix.c  D2Q9_MRT_invMatrix.h  D2Q9_VelArray.c  D2Q9_VelArray.h
src/C/lbEquation/: CMakeLists.txt  lbEquation.h
src/C/lbEquation/Fuerza/: fuerzaFuerzaint.c  fuerzaFuerzatotal.c  fuerzaFuerzatotal.h  fuerzaPresionEOS.h  fuerzaPsi.c  fuerzaPsi.h
src/C/lbEquation/energiaEcu/: energy.h  energyCollision.c  energyCollision.h  energyGradient.c  energyGradient.h  energyGradientU.c  energyGradientU.h  energyS.c  energyTemp.c  energylCoeffs.h  momentoDensity.c  momentoVelocity.h
src/C/lbEquation/energy/: energy.h  energyCoeffs.h  energyCollision.c  energyCollision.h  energyEqDistMomento.c  energyEqDistMomento.h  energyEqDistNode.c  energyEqDistNode.h  energyGradient.c  energyGradient.h  energyGradientU.c  energyS.c  energyS.h  energyTemp.c  energyTemp.h  fixedTBoundary.c  fixedTBoundary.h  fixedTBoundaryHeating.c  fixedTBoundaryHeating.h
src/C/lbEquation/exampleModel/: exampleCollision.c  exampleCollision.h  exampleDensity.c  exampleDensity.h  exampleModel.h  exampleModelCoeffs.h  exampleVelocity.c  exampleVelocity.h
src/C/lbEquation/fuerza/: fuerza.h  fuerzaFuerzaint.c  fuerzaFuerzaint.h  fuerzaFuerzatotal.c  fuerzaFuerzatotal.h  fuerzaPresionEOS.c  fuerzaPresionEOS.h  fuerzaPsi.c  fuerzaPsi.h  fuerzaS.c  fuerzaS.h
src/C/lbEquation/momentoFunciondist/: NEBB.c  NEBB.h  momentoCollision.c  momentoCollision.h  momentoDensity.h  momentoFeq.c  momentoFeq.h  momentoFunciondist.h  momentoModel.h  momentoModelCoeffs.h  momentoVelocity.c  momentoVelocity.h
src/C/lbEquation/streaming/: lbstreaming.c  lbstreaming.h  streaming.h  streamingNbReduction.c  streamingNbReduction.h  streamingUpdate.c  streamingUpdate.h
src/CUDA/: CMakeLists.txt
src/CUDA/FDOperations/: CMakeLists.txt  cudaFDOperations.h  cudaScalarGradient.cu  cudaScalarGradient.h  cudaVectorDivergence.cu  cudaVectorDivergence.h
src/CUDA/applications/: CMakeLists.txt
src/CUDA/applications/cudaBubbleGeneration/: CMakeLists.txt  cudaBubbleGeneration.cu
src/CUDA/applications/cudaMaxwellConstruction/: CMakeLists.txt  cudaMaxwellConstruction.cu  writeDebugMC.c  writeDebugMC.h
src/CUDA/applications/cudaNbReduction/: CMakeLists.txt  cudaNbReduction.cu
src/CUDA/applications/cudaSimpleCollision/: CMakeLists.txt  cudaSimpleCollision.cu
src/CUDA/applications/cudaSimpleReduction/: CMakeLists.txt  cudaSimpleReduction.cu
src/CUDA/applications/cudaVdWColumnHT/: CMakeLists.txt  cudaVdWColumnHT.cu  writeDebug.c
src/CUDA/cudaTest/: CMakeLists.txt  cudaTest.h  nbReduction.cu  nbReduction.h  thomasModel.cu  thomasModel.h  thomasReduction.cu  thomasReduction.h  threadedZerothMoment.cu  threadedZerothMoment.h  zerothMoment.cu  zerothMoment.h
src/CUDA/latticeMesh/: CMakeLists.txt  boundaryIndex.cu  boundaryIndex.h  cudaBasicMesh.h  cudaLatticeMesh.h  cudaLatticeModelInfo.h  hostToDeviceMesh.cu  hostToDeviceMesh.h
src/CUDA/lbEquation/: CMakeLists.txt  cudaLbEquation.h
src/CUDA/lbEquation/cudaEnergiaEcu/: cudaEnergy.h  cudaEnergyCollision.cu  cudaEnergyCollision.h  cudaEnergyEqDistNode.cu  cudaEnergyEqDistNode.h  cudaEnergyGradient.cu  cudaEnergyGradient.h  cudaEnergyGradientU.cu  cudaEnergyGradientU.h  cudaEnergyS.cu  cudaEnergyS.h  cudaEnergySource.cu  cudaEnergySource.h  cudaEnergyTemp.cu  cudaEnergyTemp.h  cudaEnergylCoeffs.h  cudaFixedTBoundary.cu  cudaFixedTBoundary.h  cudaFixedTBoundaryHeating.cu  cudaFixedTBoundaryHeating.h
src/CUDA/lbEquation/cudaExampleModel/: cudaExampleCollision.cu  cudaExampleCollision.h  cudaExampleDensity.cu  cudaExampleDensity.h  cudaExampleModel.h  cudaExampleVelocity.cu  cudaExampleVelocity.h  cudaThreadedMatMult.cu
src/CUDA/lbEquation/cudaFuerza/: cudaFuerza.h  cudaFuerzaFuerzaint.cu  cudaFuerzaFuerzaint.h  cudaFuerzaFuerzatotal.cu  cudaFuerzaFuerzatotal.h  cudaFuerzaPresionEOS.cu  cudaFuerzaPresionEOS.h  cudaFuerzaPsi.cu  cudaFuerzaPsi.h  cudaFuerzaS.cu  cudaFuerzaS.h
src/CUDA/lbEquation/cudaMomentoFunciondist/: cudaMomentoCollision.cu  cudaMomentoCollision.h  cudaMomentoDensity.cu  cudaMomentoDensity.h  cudaMomentoFunciondist.h  cudaMomentoModel.h  cudaMomentoVelocity.cu  cudaMomentoVelocity.h  cudaNEBB.cu  cudaNEBB.h  cudaStreaming.cu  cudaStreaming.h  cudaThreadedMatMult.cu  cudaThreadedMatMult.h
src/CUDA/lbEquation/cudaStreaming/: cudaStream.cu  cudaStream.h  cudaSwap.cu  cudaSwap.h
(+112 files in other folders)
