# lattice Models library
add_subdirectory (latticeModel)

# Mesh library
add_subdirectory (latticeMesh)

# Esquemas LB
add_subdirectory (lbEquation)

# Some basic utilities
add_subdirectory (basic)

# Operadores diferenciales con diferencias finitas
add_subdirectory (FDOperations)

# Output functions
add_subdirectory (IO)



# Applications
add_subdirectory (applications)

# # Tests
# add_subdirectory (test)
