# Reduccion simple
add_subdirectory (cudaSimpleReduction)

# Reduccion en vecinos
add_subdirectory (cudaNbReduction)

# Colision simple
add_subdirectory (cudaSimpleCollision)

# Construccion de Maxwell
add_subdirectory (cudaMaxwellConstruction)

# Construccion de Maxwell
add_subdirectory (cudaVdWColumnHT)

# Generación de Burbujas
add_subdirectory (cudaBubbleGeneration)