# Reduccion simple (suma de funciones de distribucion por nodo)
add_subdirectory (simpleReduction)

# Reduccion de reduccion de vecinos (suma de funciones de distribucion por nodo)
add_subdirectory (nbReduction)

# Colision de modelo simplificado
add_subdirectory (simpleCollision)

# Prueba de escritura
add_subdirectory (IOTest)

# Prueba de Construcción de Maxwell
add_subdirectory (maxwellConstruction)

# Columna de fluido VdW estratificado con temperatura 
add_subdirectory (VdWColumnHT)

# Generación de burbujas en una superficie calefaccionada
#add_subdirectory (bubbleGeneration)

